save student to database
